handle negative years in easter and pascha calculations.

in easter() and pascha(), return an invalid QDate when
a negative year is specified.

BUG: 434027